--- a/style.css
+++ b/style.css
@@ -1,3 +1,62 @@
 body {
-    
+    font-family: Roboto , sans-serif;
+    height: 100vm;
+    margin: 0;
+    display: flex;
+    flex-direction: column;    
+}
+
+.header {
+    padding: 20px 25% 50px 25%;
+    flex: 1;
+    background-color: #1F2937;
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.header-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.header-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+}
+
+.hb-text {
+    display: flex;
+    flex-direction: column;
+}
+
+.hb-text div {
+    font-size: 48px;
+}
+
+li , .hb-text p {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+
+ul {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    gap: 20px;
+}
+
+button {
+    box-sizing: border-box;
+    width: 100px;
+    padding: 5px;
+    border-radius: 8px;
+    border-width: 0;
+    background-color: #3882F6;
+    color: inherit;
 }
